@@ -1,3 +1,6 @@
+????-??-?? Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_07
+* Fix for parsing config files with empty values (Stefan Steiner)
+
 2010-09-20 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.00_06
 * Fix test error on 5.8.8 (reported by Wei Wang)
 * Added '--list', '-L' to list available cluster tags (idea from Markus Manzke)
